--- a/openresty/nginx.conf
+++ b/openresty/nginx.conf
@@ -6,7 +6,7 @@ events {
 http {
     server {
         listen 8080;
-        location / {
+        location /api {
             default_type text/html;
             content_by_lua '
                 ngx.say("<p>hello, world</p>")
